--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -59,7 +59,7 @@
 		<link rel="modulepreload" href="./_app/immutable/components/pages/privacy-policy.html/_page.svelte-8e6f148e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-d336c68f.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/privacy-policy.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-e94d8ac7.js"><title>Terastal - Privacy Policy</title><!-- HEAD_svelte-bj52gk_START --><link rel="canonical" href="https://terastal.net/privacy-policy.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal - Privacy Policy</title><!-- HEAD_svelte-bj52gk_START --><link rel="canonical" href="https://terastal.net/privacy-policy.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -218,7 +218,7 @@
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1qnj807"]').parentNode,
-				version: "1675703378585",
+				version: "1675704404886",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
@@ -229,7 +229,7 @@
 	</div>
 		<script src="/assets/collapse.js"></script>
 		<script src="/assets/main.js"></script>
-		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
 				'type': 'floating-chat',
@@ -237,6 +237,6 @@
 				'floating-chat.donateButton.background-color': '#fcbf47',
 				'floating-chat.donateButton.text-color': '#323842'
 			});
-		</script>
+		</script> -->
 	</body>
 </html>
