--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -50,16 +50,16 @@
 
 
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-2b334758.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-dc65e274.js">
+		<link href="./_app/immutable/assets/_layout-6964b58b.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-2484e949.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-5bd13f45.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a131feb9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/privacy-policy.html/_page.svelte-8e6f148e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-d336c68f.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/privacy-policy.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal - Privacy Policy</title><!-- HEAD_svelte-bj52gk_START --><link rel="canonical" href="https://terastal.net/privacy-policy.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-e94d8ac7.js"><title>Terastal - Privacy Policy</title><!-- HEAD_svelte-bj52gk_START --><link rel="canonical" href="https://terastal.net/privacy-policy.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -69,6 +69,10 @@
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
+		<!-- Desktop Sticky -->
+		<div id="nn_lb2"></div>
+		<!-- Mobile Sticky -->
+		<div id="nn_mobile_lb1"></div>
 		<div style="display: contents">
 
 
@@ -84,8 +88,7 @@
 						<button class="type type__button" data-type="Dark" style="margin-right: 10px;"><span>Dark Mode</span></button></li>
 					<li class="nav-item">
 						<button class="type type__button" data-type="Electric"><span>Light Mode</span></button></li></ul></div></div></nav></header>
-	<main><div id="nn_lb2"></div>
-		
+	<main>
 <div id="privacy-policy" class="divider"></div>
 <div class="container py-3 "><h3>Privacy policy</h3>
 		<h4>1.	Introduction</h4>
@@ -204,18 +207,18 @@
 				Trademark &amp; © of Nintendo 1996-2023</span>
 			<br>
 			<a href="/privacy-policy.html">Privacy Policy</a> | 
-			<a class="nn-cmp-show" href="#">Manage Cookie Settings</a></div></footer></div>
-<div class="mobile-leaderboard">mobile-leaderboard</div>
+			<a class="nn-cmp-show" href="#">Manage Cookie Settings</a></div></footer>
+</div>
 
 
-		<script type="module" data-sveltekit-hydrate="186kijx">
-			import { start } from "./_app/immutable/start-dc65e274.js";
+		<script type="module" data-sveltekit-hydrate="1qnj807">
+			import { start } from "./_app/immutable/start-2484e949.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="186kijx"]').parentNode,
-				version: "1675276210667",
+				target: document.querySelector('[data-sveltekit-hydrate="1qnj807"]').parentNode,
+				version: "1675703378585",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
@@ -226,7 +229,7 @@
 	</div>
 		<script src="/assets/collapse.js"></script>
 		<script src="/assets/main.js"></script>
-		<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
 				'type': 'floating-chat',
@@ -234,6 +237,6 @@
 				'floating-chat.donateButton.background-color': '#fcbf47',
 				'floating-chat.donateButton.text-color': '#323842'
 			});
-		</script> -->
+		</script>
 	</body>
 </html>
