--- a/index.html
+++ b/index.html
@@ -42,21 +42,28 @@
 		<base href="/" />
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://securepubads.g.doubleclick.net/" crossorigin>
+		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
+		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
+		<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
+
+
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-93601371.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-6964b58b.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-ca1f42aa.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-0d5f8b15.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-6f0d5da6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-3d2d4ae9.js">
+		<link rel="modulepreload" href="./_app/immutable/start-2484e949.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a131feb9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-f88efa3a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-be330808.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GA-d336c68f.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-e94d8ac7.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-1hfgv1q_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-1hfgv1q_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -66,6 +73,10 @@
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
+		<!-- Desktop Sticky -->
+		<div id="nn_lb2"></div>
+		<!-- Mobile Sticky -->
+		<div id="nn_mobile_lb1"></div>
 		<div style="display: contents">
 
 
@@ -77,21 +88,23 @@
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li>
-					<li class="nav-item"><a class="nav-link undefined" href="/howto-video.html">HowTo Video</a></li></ul></div>
-			
-			</div></nav></header>
-
+					<li class="nav-item">
+						<button class="type type__button" data-type="Dark" style="margin-right: 10px;"><span>Dark Mode</span></button></li>
+					<li class="nav-item">
+						<button class="type type__button" data-type="Electric"><span>Light Mode</span></button></li></ul></div></div></nav></header>
 	<main>
 
 <div id="raid-counter" class="divider"></div>
 
 <div class="container py-3 raid-counter"><div class="row px-0"><div class="col-12"><h2 class="jumbotron-heading">Tera Raid Counter</h2>
 			<p class="lead">Find the best Counter for a Tera Raid.</p>
+			<div class="lb-wrapper"><div id="nn_lb1"></div>
+				<div id="nn_mobile_lb2"></div></div>
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 									<form class="pokemon-search-form svelte-1fpf2fw"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button>
 												</div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-760 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-462 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -283,17 +296,18 @@
 							<div class="raid-card-background-1"></div></div></div></div></div>
 
 			
-			<div class="row px-0 "><div class="col-12 col-lg-5"><div class="row"><h4 class="jumbotron-heading">Tera Raid Pokémon</h4>
+			<div class="row px-0 "><div class="col-12 col-lg-6"><div class="row"><h4 class="jumbotron-heading">Tera Raid Pokémon</h4>
 						<table class="table table-sm table-bordered"><tbody><tr><th>Possible Attacks</th>
 										<th>Power</th>
 										<th>Category</th></tr>
 									<tr><td colspan="3" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></tr></tbody></table></div>
 					<div class="row"><h4 class="jumbotron-heading">Best Counter Pokémon (Beta)</h4>
 							
-							<table class="table table-bordered table-sm table-striped"><thead><td colspan="9" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></thead>
-								<tbody></tbody></table></div></div>
+							<table class="table table-bordered table-sm table-striped table-pokemon-suggestions" style="table-layout: fixed;"><thead><td colspan="7" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></thead>
+								<tbody></tbody></table>
+							<p><span><div class="badge score-bg" style="display: inline-block; width: 50px" data-score="10"><span>Δ 10</span></div></span> *Δ (delta) means e.g. the difference between your PKMNs STAT and the Raid Pokemons counter STAT (e.g. your ATT vs enemies DEF). A higher Δ is better.</p></div></div>
 
-				<div class="col-12 col-lg-7"><div class="row"><h4 class="jumbotron-heading">Best Abilities (Beta)</h4>
+				<div class="col-12 col-lg-6"><div class="row"><h4 class="jumbotron-heading">Best Abilities (Beta)</h4>
 						<table class="table table-bordered table-sm table-striped"><thead><tr><th>Ability</th>
 									<th>Description</th>
 									<th>Good against</th>
@@ -320,22 +334,24 @@
 							</div></div></div></div></div></div>
 
 </main>
-
 	<footer class="svelte-1040u2c"><div class="container"><p>Found a bug? Report it to: <a target="_blank" rel="noreferrer" href="https://www.reddit.com/user/Blitzlord">https://www.reddit.com/user/Blitzlord</a></p>
 			<span>This website is not affiliated with, sponsored or endorsed by, or in any way associated
 				with Pokémon or The Pokémon Company International Inc. Pokémon and all respective names are
-				Trademark &amp; © of Nintendo 1996-2023</span></div></footer>
+				Trademark &amp; © of Nintendo 1996-2023</span>
+			<br>
+			<a href="/privacy-policy.html">Privacy Policy</a> | 
+			<a class="nn-cmp-show" href="#">Manage Cookie Settings</a></div></footer>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="358uzf">
-			import { start } from "./_app/immutable/start-0d5f8b15.js";
+		<script type="module" data-sveltekit-hydrate="1tq3u2d">
+			import { start } from "./_app/immutable/start-2484e949.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="358uzf"]').parentNode,
-				version: "1675688510117",
+				target: document.querySelector('[data-sveltekit-hydrate="1tq3u2d"]').parentNode,
+				version: "1675703378585",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
@@ -345,6 +361,7 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
+		<script src="/assets/main.js"></script>
 		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
