--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -42,21 +42,28 @@
 		<base href="/" />
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://securepubads.g.doubleclick.net/" crossorigin>
+		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
+		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
+		<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
+
+
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-93601371.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-6964b58b.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-0d5f8b15.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-51006e9d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-3d2d4ae9.js">
+		<link rel="modulepreload" href="./_app/immutable/start-2484e949.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a131feb9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-64546ee5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GA-d336c68f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-be330808.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-gjthpt_START --><link rel="canonical" href="https://terastal.net/tera-type-calculator.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-gjthpt_START --><link rel="canonical" href="https://terastal.net/tera-type-calculator.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -66,6 +73,10 @@
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
+		<!-- Desktop Sticky -->
+		<div id="nn_lb2"></div>
+		<!-- Mobile Sticky -->
+		<div id="nn_mobile_lb1"></div>
 		<div style="display: contents">
 
 
@@ -77,15 +88,17 @@
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link undefined" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li>
-					<li class="nav-item"><a class="nav-link undefined" href="/howto-video.html">HowTo Video</a></li></ul></div>
-			
-			</div></nav></header>
-
+					<li class="nav-item">
+						<button class="type type__button" data-type="Dark" style="margin-right: 10px;"><span>Dark Mode</span></button></li>
+					<li class="nav-item">
+						<button class="type type__button" data-type="Electric"><span>Light Mode</span></button></li></ul></div></div></nav></header>
 	<main>
 <div id="tera-type-calcultator" class="divider"></div>
 
 <div class="container py-3 tera-type-calcultator"><div class="row px-0"><div class="col-12"><h2 class="jumbotron-heading">Tera Type Calculator</h2>
 				<p class="lead">Find the best Tera Type for your Pokémon to win VGC Battles.</p>
+				<div class="lb-wrapper"><div id="nn_lb1"></div>
+					<div id="nn_mobile_lb2"></div></div>
 				<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row"><div class="col-12 col-sm-12 col-md-12 col-lg-3 col-xl-3">
 										
 										
@@ -96,7 +109,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-319 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-246 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -129,7 +142,7 @@
 										</div>
 									<div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-6 "><h4>Weaknesses</h4>
 										<p>Your Pokemon is weak against:</p>
-										<table class="table table-bordered table-sm bg-white"><tbody><tr><th class="text-center" colspan="6">Factor</th></tr>
+										<table class="table table-bordered table-sm"><tbody><tr><th class="text-center" colspan="6">Factor</th></tr>
 												<tr><th class="text-center"><span class="d-md-none">0×</span><span class="d-none d-md-block">Immune</span></th>
 													<th class="text-center">¼×</th>
 													<th class="text-center">½×</th>
@@ -142,29 +155,31 @@
 										<p class="error">No Tera Type selected. Please select a Tera Type.</p></div>
 									<div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 "><h4>Best Tera Type Results</h4>
 										<p>The best Tera Types for your Pokemon are:</p>
-										<div class="d-flex justify-content-between align-items-center bg-white"><table class="table table-bordered table-sm"><tbody><tr><th class="text-center">Score*</th>
+										<div class="d-flex justify-content-between align-items-center"><table class="table table-bordered table-sm"><tbody><tr><th class="text-center">Score*</th>
 														<th>Tera Types</th></tr>
 												</tbody></table></div></div></div>
 								<div class="raid-card-background-2"></div></div></div>
 						<p><small>*The score is calculated from the super effectiveness + resistance of the new tera type against your weaknesses.<br><b>Example:</b> First your Fuecoco is weak against Fire, Ground and Rock. The best Tera Type would be <div data-type="Grass" class="type type__small"><span>Grass</span></div> with a score of 10. Because Grass is super effective against Water (2), Ground (2), Rock (2). So the score score is 6 + New Resistance against Water(2) and Ground (2). Together it&#39;s a score of 10. </small></p></div></div></div></div>
 	
 </div></main>
-
 	<footer class="svelte-1040u2c"><div class="container"><p>Found a bug? Report it to: <a target="_blank" rel="noreferrer" href="https://www.reddit.com/user/Blitzlord">https://www.reddit.com/user/Blitzlord</a></p>
 			<span>This website is not affiliated with, sponsored or endorsed by, or in any way associated
 				with Pokémon or The Pokémon Company International Inc. Pokémon and all respective names are
-				Trademark &amp; © of Nintendo 1996-2023</span></div></footer>
+				Trademark &amp; © of Nintendo 1996-2023</span>
+			<br>
+			<a href="/privacy-policy.html">Privacy Policy</a> | 
+			<a class="nn-cmp-show" href="#">Manage Cookie Settings</a></div></footer>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1wrzc2i">
-			import { start } from "./_app/immutable/start-0d5f8b15.js";
+		<script type="module" data-sveltekit-hydrate="1c5b2ng">
+			import { start } from "./_app/immutable/start-2484e949.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1wrzc2i"]').parentNode,
-				version: "1675688510117",
+				target: document.querySelector('[data-sveltekit-hydrate="1c5b2ng"]').parentNode,
+				version: "1675703378585",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
@@ -174,6 +189,7 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
+		<script src="/assets/main.js"></script>
 		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
