--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,6 +13,7 @@
 			name="keywords"
 			content="Best Pokemon for Tera Raid, Terastal, Terastal.net, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
 			Tera Type Calculator,
+				7 Star Pikachu Raid Water,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
 				Ditto,Hydreigon,Haxorus,Breloom,Slowking,Tinkaton,Avalugg,Volcarona,Ceruledge,Armarouge,
@@ -46,14 +47,14 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-0c34121a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-21f3dc43.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a131feb9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/privacy-policy.html/_page.svelte-36347377.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-3c2f2e47.js">
+		<link href="./_app/immutable/assets/_layout-381e89d3.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-28018076.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-8c126543.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-731bec51.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-986bc885.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ccc07371.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/privacy-policy.html/_page.svelte-960c6d7a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-fa581567.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/privacy-policy.html/_page.ts-94291217.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal - Privacy Policy</title><!-- HEAD_svelte-rfo6gi_START --><link rel="canonical" href="https://terastal.net/privacy-policy.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
@@ -210,13 +211,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1qnj807">
-			import { start } from "./_app/immutable/start-21f3dc43.js";
+			import { start } from "./_app/immutable/start-28018076.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1qnj807"]').parentNode,
-				version: "1676802820492",
+				version: "1677217425362",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
