--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			name="keywords"
 			content="Best Pokemon for Tera Raid, Terastal, Terastal.net, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
 			Tera Type Calculator,
+				7 Star Pikachu Raid Water,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
 				Ditto,Hydreigon,Haxorus,Breloom,Slowking,Tinkaton,Avalugg,Volcarona,Ceruledge,Armarouge,
@@ -46,18 +47,18 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-0c34121a.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-007686a7.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-381e89d3.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page-4255f6f5.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-21f3dc43.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a131feb9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-6e1b7df8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-865c4fb4.js">
+		<link rel="modulepreload" href="./_app/immutable/start-28018076.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-8c126543.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-731bec51.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-986bc885.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ccc07371.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-50ba958d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-67eeee7b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-3c2f2e47.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-fa581567.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-2d9auo_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
@@ -99,10 +100,16 @@
 			<div class="lb-wrapper"><div id="nn_lb1"></div>
 				<div id="nn_mobile_lb2"></div></div>
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-									<form class="pokemon-search-form svelte-16bne81"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
+									<form class="pokemon-search-form svelte-1l3vorx"><div class="row"><div class="col-12 px-0"><small>Ongoing Event:</small><br>
+												<button type="button" class="preset" data-type="Water"><div class="type"></div>
+													<div class="stars"><div class="star star__preset" data-star="1"></div><div class="star star__preset" data-star="2"></div><div class="star star__preset" data-star="3"></div><div class="star star__preset" data-star="4"></div><div class="star star__preset" data-star="5"></div><div class="star star__preset" data-star="6"></div><div class="star star__preset" data-star="7"></div></div>
+													<div class="name">Pikachu</div>
+													<div class="image"><div class="pokemon pokemon__preset" style="background-color: white; --pokemon-url:url(&quot;/assets/i/25.min.png&quot;);"></div></div>
+												</button></div>
+											<div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button>
 												</div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-705 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-187 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -317,7 +324,7 @@
 									
 									<div class="row">
 										<p>Select the Tera Type:</p>
-										<div class="raid-card__tera-type svelte-16bne81"><button type="button" class="type type__tera-symbol" title="Normal" disabled data-selected="false" data-type="Normal"></button><button type="button" class="type type__tera-symbol" title="Fire" disabled data-selected="false" data-type="Fire"></button><button type="button" class="type type__tera-symbol" title="Water" disabled data-selected="false" data-type="Water"></button><button type="button" class="type type__tera-symbol" title="Electric" disabled data-selected="false" data-type="Electric"></button><button type="button" class="type type__tera-symbol" title="Grass" disabled data-selected="false" data-type="Grass"></button><button type="button" class="type type__tera-symbol" title="Ice" disabled data-selected="false" data-type="Ice"></button><button type="button" class="type type__tera-symbol" title="Fighting" disabled data-selected="false" data-type="Fighting"></button><button type="button" class="type type__tera-symbol" title="Poison" disabled data-selected="false" data-type="Poison"></button><button type="button" class="type type__tera-symbol" title="Ground" disabled data-selected="false" data-type="Ground"></button><button type="button" class="type type__tera-symbol" title="Flying" disabled data-selected="false" data-type="Flying"></button><button type="button" class="type type__tera-symbol" title="Psychic" disabled data-selected="false" data-type="Psychic"></button><button type="button" class="type type__tera-symbol" title="Bug" disabled data-selected="false" data-type="Bug"></button><button type="button" class="type type__tera-symbol" title="Rock" disabled data-selected="false" data-type="Rock"></button><button type="button" class="type type__tera-symbol" title="Ghost" disabled data-selected="false" data-type="Ghost"></button><button type="button" class="type type__tera-symbol" title="Dragon" disabled data-selected="false" data-type="Dragon"></button><button type="button" class="type type__tera-symbol" title="Dark" disabled data-selected="false" data-type="Dark"></button><button type="button" class="type type__tera-symbol" title="Steel" disabled data-selected="false" data-type="Steel"></button><button type="button" class="type type__tera-symbol" title="Fairy" disabled data-selected="false" data-type="Fairy"></button></div></div>
+										<div class="raid-card__tera-type svelte-1l3vorx"><button type="button" class="type type__tera-symbol" title="Normal" disabled data-selected="false" data-type="Normal"></button><button type="button" class="type type__tera-symbol" title="Fire" disabled data-selected="false" data-type="Fire"></button><button type="button" class="type type__tera-symbol" title="Water" disabled data-selected="false" data-type="Water"></button><button type="button" class="type type__tera-symbol" title="Electric" disabled data-selected="false" data-type="Electric"></button><button type="button" class="type type__tera-symbol" title="Grass" disabled data-selected="false" data-type="Grass"></button><button type="button" class="type type__tera-symbol" title="Ice" disabled data-selected="false" data-type="Ice"></button><button type="button" class="type type__tera-symbol" title="Fighting" disabled data-selected="false" data-type="Fighting"></button><button type="button" class="type type__tera-symbol" title="Poison" disabled data-selected="false" data-type="Poison"></button><button type="button" class="type type__tera-symbol" title="Ground" disabled data-selected="false" data-type="Ground"></button><button type="button" class="type type__tera-symbol" title="Flying" disabled data-selected="false" data-type="Flying"></button><button type="button" class="type type__tera-symbol" title="Psychic" disabled data-selected="false" data-type="Psychic"></button><button type="button" class="type type__tera-symbol" title="Bug" disabled data-selected="false" data-type="Bug"></button><button type="button" class="type type__tera-symbol" title="Rock" disabled data-selected="false" data-type="Rock"></button><button type="button" class="type type__tera-symbol" title="Ghost" disabled data-selected="false" data-type="Ghost"></button><button type="button" class="type type__tera-symbol" title="Dragon" disabled data-selected="false" data-type="Dragon"></button><button type="button" class="type type__tera-symbol" title="Dark" disabled data-selected="false" data-type="Dark"></button><button type="button" class="type type__tera-symbol" title="Steel" disabled data-selected="false" data-type="Steel"></button><button type="button" class="type type__tera-symbol" title="Fairy" disabled data-selected="false" data-type="Fairy"></button></div></div>
 									
 									<div class="row"><p>Select the Stars Count:</p>
 										<div class="raid-card__stars"><button type="button" class="all-stars d-xxl-inline-block d-xl-inline-block" data-star="0" data-selected="true" data-last-selected="true">All</button>
@@ -331,7 +338,7 @@
 												</button></div></div>
 									</div>
 								<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex justify-content-center align-items-center">
-									<div class="raid-card__pokemon svelte-16bne81"><p class="error" style="position: absolute; top: 48%;"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></p></div></div></div>
+									<div class="raid-card__pokemon svelte-1l3vorx"><p class="error" style="position: absolute; top: 48%;"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></p></div></div></div>
 							<div class="raid-card-background-1"></div></div></div></div></div>
 
 			
@@ -382,14 +389,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="jvh72u">
-			import { start } from "./_app/immutable/start-21f3dc43.js";
+		<script type="module" data-sveltekit-hydrate="1auwf3b">
+			import { start } from "./_app/immutable/start-28018076.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="jvh72u"]').parentNode,
-				version: "1676802820492",
+				target: document.querySelector('[data-sveltekit-hydrate="1auwf3b"]').parentNode,
+				version: "1677217425362",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
