--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-381e89d3.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-774d5e3f.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-4255f6f5.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-28018076.js">
+		<link rel="modulepreload" href="./_app/immutable/start-b99b8beb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-8c126543.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-731bec51.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-986bc885.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-88dda814.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ccc07371.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-50ba958d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-67eeee7b.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-790b5fdb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-0340cf40.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-fa581567.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-2d9auo_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-2d9auo_START --><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -109,7 +109,7 @@
 											<div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button>
 												</div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-187 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-177 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -353,7 +353,7 @@
 								<tbody></tbody></table>
 							<p><span><div class="badge score-bg" style="display: inline-block; width: 50px" data-score="10"><span>Δ 10</span></div></span> *Δ (delta) means e.g. the difference between your PKMNs STAT and the Raid Pokemons counter STAT (e.g. your ATT vs enemies DEF). A higher Δ is better.</p></div></div>
 
-				<div class="col-12 col-lg-6"><div class="row"><h4 class="jumbotron-heading">Best Abilities</h4>
+				<div class="col-12 col-lg-6"><div class="row"><h4 class="jumbotron-heading">Best Counter Abilities</h4>
 						<table class="table table-bordered table-sm table-striped"><thead><tr><th>Ability</th>
 									<th>Description</th>
 									<th>Good against</th></tr></thead>
@@ -385,18 +385,19 @@
 				Trademark &amp; © of Nintendo 1996-2023</span>
 			<br>
 			<a href="/privacy-policy.html">Privacy Policy</a> | 
-			<a class="nn-cmp-show" href="#">Manage Cookie Settings</a></div></footer>
+			<a class="nn-cmp-show" href="#">Manage Cookie Settings</a> |
+			<a href="https://ko-fi.com/V7V5HK1DQ" target="_blank"><img height="36" style="border:0px;height:36px;" src="https://storage.ko-fi.com/cdn/kofi4.png?v=3" border="0" alt="Buy Me a Coffee at ko-fi.com"></a></div></footer>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1auwf3b">
-			import { start } from "./_app/immutable/start-28018076.js";
+		<script type="module" data-sveltekit-hydrate="1s3rrrh">
+			import { start } from "./_app/immutable/start-b99b8beb.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1auwf3b"]').parentNode,
-				version: "1677217425362",
+				target: document.querySelector('[data-sveltekit-hydrate="1s3rrrh"]').parentNode,
+				version: "1677412298879",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
