--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -47,16 +47,16 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-381e89d3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-28018076.js">
+		<link href="./_app/immutable/assets/_layout-774d5e3f.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-b99b8beb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-8c126543.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-731bec51.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-986bc885.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-88dda814.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ccc07371.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/privacy-policy.html/_page.svelte-960c6d7a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-fa581567.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/privacy-policy.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal - Privacy Policy</title><!-- HEAD_svelte-rfo6gi_START --><link rel="canonical" href="https://terastal.net/privacy-policy.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal - Privacy Policy</title><!-- HEAD_svelte-rfo6gi_START --><link rel="canonical" href="https://terastal.net/privacy-policy.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 	<script async src="https://kumo.network-n.com/dist/app.js" site="terastal"></script>
 	
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -206,18 +206,19 @@
 				Trademark &amp; © of Nintendo 1996-2023</span>
 			<br>
 			<a href="/privacy-policy.html">Privacy Policy</a> | 
-			<a class="nn-cmp-show" href="#">Manage Cookie Settings</a></div></footer>
+			<a class="nn-cmp-show" href="#">Manage Cookie Settings</a> |
+			<a href="https://ko-fi.com/V7V5HK1DQ" target="_blank"><img height="36" style="border:0px;height:36px;" src="https://storage.ko-fi.com/cdn/kofi4.png?v=3" border="0" alt="Buy Me a Coffee at ko-fi.com"></a></div></footer>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1qnj807">
-			import { start } from "./_app/immutable/start-28018076.js";
+		<script type="module" data-sveltekit-hydrate="1ofy586">
+			import { start } from "./_app/immutable/start-b99b8beb.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1qnj807"]').parentNode,
-				version: "1677217425362",
+				target: document.querySelector('[data-sveltekit-hydrate="1ofy586"]').parentNode,
+				version: "1677412298879",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
