--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 		<meta
 			name="keywords"
 			content="Best Pokemon for Tera Raid, Terastal, Terastal.net, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
-			Tera Type Calculator,
+				Tera Type Calculator,
+				Walking Wake,
+				Iron Leaves,
+				Walking Wake Raid,
+				Iron Leaves Raid, 
+				Walking Wake Counter,
+				Iron Leaves Counter,
+				Walking Wake Build,
+				Iron Leaves Build,
+				Paradox Raid,
+				Paradox,
+				DLC, 
+				Tera Raid Battle,
 				7 Star Pikachu Raid Water,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
@@ -47,16 +59,16 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-774d5e3f.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-eddf3901.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-4255f6f5.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-b99b8beb.js">
+		<link rel="modulepreload" href="./_app/immutable/start-6feee771.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-8c126543.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-731bec51.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-88dda814.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ccc07371.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-790b5fdb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-0340cf40.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-00931e8d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-0e4f4d23.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-fa581567.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
@@ -100,16 +112,20 @@
 			<div class="lb-wrapper"><div id="nn_lb1"></div>
 				<div id="nn_mobile_lb2"></div></div>
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-									<form class="pokemon-search-form svelte-1l3vorx"><div class="row"><div class="col-12 px-0"><small>Ongoing Event:</small><br>
+									<form class="pokemon-search-form svelte-1l3vorx"><div class="row"><div class="col-12 px-0"><small>Recent Event:</small><br>
 												<button type="button" class="preset" data-type="Water"><div class="type"></div>
-													<div class="stars"><div class="star star__preset" data-star="1"></div><div class="star star__preset" data-star="2"></div><div class="star star__preset" data-star="3"></div><div class="star star__preset" data-star="4"></div><div class="star star__preset" data-star="5"></div><div class="star star__preset" data-star="6"></div><div class="star star__preset" data-star="7"></div></div>
-													<div class="name">Pikachu</div>
-													<div class="image"><div class="pokemon pokemon__preset" style="background-color: white; --pokemon-url:url(&quot;/assets/i/25.min.png&quot;);"></div></div>
+													<div class="stars"><div class="star star__preset" data-star="1"></div><div class="star star__preset" data-star="2"></div><div class="star star__preset" data-star="3"></div><div class="star star__preset" data-star="4"></div><div class="star star__preset" data-star="5"></div></div>
+													<div class="name">Walking Wake</div>
+													<div class="image"><div class="pokemon pokemon__preset" style="background-color: white; --pokemon-url:url(/assets/i/1009.min.png);"></div></div>
+												</button><button type="button" class="preset" data-type="Psychic"><div class="type"></div>
+													<div class="stars"><div class="star star__preset" data-star="1"></div><div class="star star__preset" data-star="2"></div><div class="star star__preset" data-star="3"></div><div class="star star__preset" data-star="4"></div><div class="star star__preset" data-star="5"></div></div>
+													<div class="name">Iron Leaves</div>
+													<div class="image"><div class="pokemon pokemon__preset" style="background-color: white; --pokemon-url:url(/assets/i/1010.min.png);"></div></div>
 												</button></div>
 											<div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button>
 												</div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-177 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-5 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -317,7 +333,7 @@
 														<div class="type type__symbol-autocomplete" data-type="Grass"></div></div>
           </div>
 
-      <div slot="dropdown-footer" class="autocomplete-list-item-no-results">...326 Pokémons not shown. <button class="type type__button-small" data-type="Water"><span>Show 100 more</span></button><br>
+      <div slot="dropdown-footer" class="autocomplete-list-item-no-results">...328 Pokémons not shown. <button class="type type__button-small" data-type="Water"><span>Show 100 more</span></button><br>
 														Please use the text search or the type filter above to see more Pokémon.<br>You can also search by stars. i.e. &quot;5&quot; or by german or french Pokémon names.<br>Found a bug? Report it to: <a target="_blank" rel="noreferrer" href="https://www.reddit.com/user/Blitzlord">https://www.reddit.com/user/Blitzlord</a></div></div></div>
 
 </div></div></form>
@@ -359,7 +375,6 @@
 									<th>Good against</th></tr></thead>
 							<tbody><tr><td colspan="4" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></tr></tbody></table></div>
 
-
 					<div class="row"><h4 class="jumbotron-heading">Best Counter Types</h4>
 						<table class="table table-bordered table-sm table-striped"><thead><tr><th>Type</th>
 									<th><small class="d-block d-sm-none ">RESI</small>
@@ -390,14 +405,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1s3rrrh">
-			import { start } from "./_app/immutable/start-b99b8beb.js";
+		<script type="module" data-sveltekit-hydrate="1pzakd5">
+			import { start } from "./_app/immutable/start-6feee771.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1s3rrrh"]').parentNode,
-				version: "1677412298879",
+				target: document.querySelector('[data-sveltekit-hydrate="1pzakd5"]').parentNode,
+				version: "1677517606107",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
