--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -12,7 +12,19 @@
 		<meta
 			name="keywords"
 			content="Best Pokemon for Tera Raid, Terastal, Terastal.net, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
-			Tera Type Calculator,
+				Tera Type Calculator,
+				Walking Wake,
+				Iron Leaves,
+				Walking Wake Raid,
+				Iron Leaves Raid, 
+				Walking Wake Counter,
+				Iron Leaves Counter,
+				Walking Wake Build,
+				Iron Leaves Build,
+				Paradox Raid,
+				Paradox,
+				DLC, 
+				Tera Raid Battle,
 				7 Star Pikachu Raid Water,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
@@ -47,17 +59,17 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-774d5e3f.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-eddf3901.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-b99b8beb.js">
+		<link rel="modulepreload" href="./_app/immutable/start-6feee771.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-8c126543.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-731bec51.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-88dda814.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ccc07371.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-6fb66a2f.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-c15d7900.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Scripts-fa581567.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-0340cf40.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-0e4f4d23.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page-e94d8ac7.js"><title>Terastal Calculator - Best Tera Type Counter</title><!-- HEAD_svelte-12z4zbv_START --><link rel="canonical" href="https://terastal.net/tera-type-calculator.html"><script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
@@ -108,7 +120,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-671 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-943 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -133,7 +145,7 @@
           </div>
 
       
-        <div class="autocomplete-list-item-no-results svelte-75ckfb">...420
+        <div class="autocomplete-list-item-no-results svelte-75ckfb">...422
               items not shown</div>
       </div></div>
 
@@ -172,14 +184,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="lkih0j">
-			import { start } from "./_app/immutable/start-b99b8beb.js";
+		<script type="module" data-sveltekit-hydrate="1clznv3">
+			import { start } from "./_app/immutable/start-6feee771.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="lkih0j"]').parentNode,
-				version: "1677412298879",
+				target: document.querySelector('[data-sveltekit-hydrate="1clznv3"]').parentNode,
+				version: "1677517606107",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
