--- a/type-table.html
+++ b/type-table.html
@@ -12,7 +12,19 @@
 		<meta
 			name="keywords"
 			content="Best Pokemon for Tera Raid, Terastal, Terastal.net, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
-			Tera Type Calculator,
+				Tera Type Calculator,
+				Walking Wake,
+				Iron Leaves,
+				Walking Wake Raid,
+				Iron Leaves Raid, 
+				Walking Wake Counter,
+				Iron Leaves Counter,
+				Walking Wake Build,
+				Iron Leaves Build,
+				Paradox Raid,
+				Paradox,
+				DLC, 
+				Tera Raid Battle,
 				7 Star Pikachu Raid Water,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
@@ -47,8 +59,8 @@
 		<!-- Place the below code anywhere you like in the <head> (higher is better) -->
 		<script>window.AdSlots = window.AdSlots || {cmd: [], disableScripts: ['gpt']};</script>
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-774d5e3f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-b99b8beb.js">
+		<link href="./_app/immutable/assets/_layout-eddf3901.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-6feee771.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-8c126543.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-731bec51.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-88dda814.js">
@@ -188,13 +200,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1h8ho39">
-			import { start } from "./_app/immutable/start-b99b8beb.js";
+			import { start } from "./_app/immutable/start-6feee771.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1h8ho39"]').parentNode,
-				version: "1677412298879",
+				version: "1677517606107",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
